--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,8 @@
+body {
+	font-family: font-family: Raleway, sans-serif;
+	font-weight: 300;
+}
+
 #container {
 	width: 960px;
 
@@ -66,6 +71,7 @@ h3 {
 	font-family: Raleway, sans-serif;
 	font-weight: 600;
 	padding-bottom: 15px;
+	color: black;
 }
 
 span {
@@ -117,22 +123,40 @@ span {
 	border: 1px solid red;
 }
 
-#quest-one-three {
-	padding-top: 22px;
-	padding-bottom: 22px;
+.quest-two-title {
+	color: #efefef;
 }
 
-.quest-two-title {
-	color: gray;
+.number-two {
+	color: #efefef;
+}
+
+.quest-three-title {
+	color: #efefef;
+}
+
+.number-three {
+	color: #efefef;
+}
+
+#quest-two-container {
+	margin-left: 50px;
+	margin-right: 225px;
+	font-family: font-family: Raleway, sans-serif;
+	font-weight: 300;
+
 }
 
 aside {
+	font-family: font-family: Raleway, sans-serif;
+	font-weight: 300;
+	font-size: 12px;
 	clear: both;
 /*	float: right;
 */  
 	width: 200px;
 	margin: 0;
-	position: absolute;
+	position: fixed;
 	right: -200px;
     height: 500px;
     background: #ccc;
@@ -141,6 +165,10 @@ aside {
 
 .slide {
 	right: 20px;
+	font-family: Raleway, sans-serif;
+	font-weight: 300;
+	padding: 20px;
+	line-height: 1em;
 }
 
 p {
@@ -149,4 +177,69 @@ p {
 	margin: 0;
 }
 
+#glance-quest-one{
+	width: 180px;
+	height: 300px;
+	margin: 0;
+	padding-left: 25px;
+	padding-top: 25px;
+}
 
+div {
+	font-family: Raleway, sans-serif;
+	font-weight: 300;
+
+}
+
+#quest-two-one {
+	visibility: hidden;
+}
+
+#quest-two-two {
+	visibility: hidden;
+}
+
+.button-clicked {
+	background-color: red !important;
+	color: white !important;
+}
+.button-condensed {
+	padding: 5px 30px !important;
+	margin-bottom: 5px !important;
+
+}
+
+#quest-three-container {
+	visibility: hidden;
+}
+h4 {
+	font-family: Raleway, sans-serif;
+	font-weight: 600;
+	margin: 0;
+	padding-bottom: 10px;
+	border-bottom: 1px solid red;
+	width: 250px;
+
+}
+#quest-three-container{
+	padding-left: 50px;
+	line-height: 2em;
+}
+
+#medical p {
+	padding-top: 15px;
+	margin: 0;
+}
+
+/* use transition to made the button condense smoother
+.column a{
+     height:0;
+     width:500px;
+     -webkit-transition: height 1s ease;
+     -moz-transition: height 1s ease;
+     transition: height 1s ease;
+}
+.img-moved-left{
+     margin-left:-500px;
+}
+*/
